# fishbowl-cleaner

./: .gitignore  pyproject.toml
ai_cleaner/: authenticator.py  main.py
ai_cleaner/dataTypes/: customers.py  vendors.py
img/: public.avif
