[tool.poetry]
name = "ai-cleaner"
version = "0.1.0"
description = ""
authors = ["seb-andreasen <sebastian.straarup.andreasen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
openai = "^1.14.2"
streamlit = "^1.32.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
